Closed Bug 135782 Opened 22 years ago Closed 22 years ago

"visibility: hidden" does not hide table borders with "border-collapse: collapse"

Categories

(Core :: Layout: Tables, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.0

People

(Reporter: hs, Assigned: bernd_mozilla)

References

Details

(Whiteboard: [FIXED_ON_TRUNK])

Attachments

(2 files, 1 obsolete file)

In the following example only the table content is hidden, but not the border:

<table style="border-collapse: collapse; border: 1px solid black; visibility:
hidden;"><td>XXXXX</table>

If I understand the specs correctly, mozilla should hide the border here (and IE
actually does).
Confirmed on Win2K 2002040608; setting OS and Platform to All.

Is this the right component, or should it go to HTML Tables?
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: PC → All
Attached file Testcase showing bug
Reassigning to Karnaze.
Assignee: kmcclusk → karnaze
*** Bug 138953 has been marked as a duplicate of this bug. ***
Component: GFX Compositor → HTMLTables
QA Contact: petersen → amar
Attached patch patch (obsolete) — Splinter Review
accepting the bug
Assignee: karnaze → bernd.mielke
Comment on attachment 80297 [details] [diff] [review]
patch

r=karnaze
Attachment #80297 - Flags: review+
Attached patch patch cleaned upSplinter Review
Attachment #80297 - Attachment is obsolete: true
the revised patch has passed the regression tests and the test list from bug 41262.
Status: NEW → ASSIGNED
Comment on attachment 80792 [details] [diff] [review]
patch cleaned up

r=karnaze
Attachment #80792 - Flags: review+
Comment on attachment 80792 [details] [diff] [review]
patch cleaned up

sr=attinasi
Attachment #80792 - Flags: superreview+
*** Bug 141220 has been marked as a duplicate of this bug. ***
fix checked in on trunk 
branch checkin has been denied. 

Bernd Mielke wrote:

>
> Hi,
>
> is it possible to approve 
> http://bugzilla.mozilla.org/show_bug.cgi?id=135782? It got r=karnaze 
> and sr=attinasi. It fixes real pages, like the duped bug with 
> dhtmlkitchen shows. The risk seems to me small. The patch is already 
> on trunk
>
> Thanks
>
> Bernd
>
Not critical to 1.0.

--Asa
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 144949 has been marked as a duplicate of this bug. ***
Priority: -- → P3
Whiteboard: [FIXED_ON_TRUNK]
Target Milestone: --- → mozilla1.0
User-Agent: 
Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.0) Gecko/20020529


URL:
http://dhtmlkitchen.com/css/positioning/

description:
  there are several tables that are hidden in divs. Each table has a border
attribute. The tables are hidden by inheriting the visibility from their
ancestor div. The borders of said tables are visible.

I don't know if this bug still affects other platforms, I can only verify that
the table borders are visible in the User-Agent noted above.
Tested in Netscape 6.2.2 Windows and found no problems. Tested in Netscape 7.0 
first release and Mozilla 1.1 final and found the problem had re-emerged.
The code I used to test is:
<html>
  <body>
              	                     
<table cellspacing="0" cellpadding="0" border="0"
 style="border-top: 1px solid black; width: 165px; border-collapse: collapse; 
visibility: hidden;">
        <tbody>
         <tr>
           <td>&nbsp;<br>
          </td>
         </tr>
                   
  </tbody>              
</table>
                          <br>
   
</body>
</html>
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Peter, both those versions are months old.  Don't act on a bug unless you test
it using a nightly build.

Works correctly (no borders shown) in nightly builds, Win2K and MacOS9.

Re-resolving FIXED.
Status: REOPENED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: