hide also collapsed borders when the table is hidden, bug 135782 r=karnaze sr=attinasi